@@ -231,28 +231,25 @@ class BuildBotTest(unittest.TestCase):
             {'name': u'SnowLeopard Intel Release (WebKit2 Tests)', },
             {'name': u'SnowLeopard Intel Leaks', },
             {'name': u'Windows Release (Build)', },
-            {'name': u'Windows 7 Release (Tests)', },
+            {'name': u'Windows Release (Tests)', },
             {'name': u'Windows Debug (Build)', },
-            {'name': u'Windows XP Debug (Tests)', },
-            {'name': u'Windows 7 Release (WebKit2 Tests)', },
+            {'name': u'Windows Debug (Tests)', },
             {'name': u'GTK Linux 32-bit Release', },
             {'name': u'GTK Linux 32-bit Debug', },
             {'name': u'GTK Linux 64-bit Debug', },
+            {'name': u'GTK Linux 64-bit Release', },
             {'name': u'Qt Linux Release', },
             {'name': u'Qt Linux Release minimal', },
             {'name': u'Qt Linux ARMv7 Release', },
             {'name': u'Qt Windows 32-bit Release', },
             {'name': u'Qt Windows 32-bit Debug', },
-            {'name': u'Chromium Win Release', },
-            {'name': u'Chromium Mac Release', },
             {'name': u'Chromium Linux Release', },
-            {'name': u'Chromium Win Release (Tests)', },
-            {'name': u'Chromium Mac Release (Tests)', },
+            {'name': u'Chromium Mac Release', },
+            {'name': u'Chromium Win Release', },
             {'name': u'Chromium Linux Release (Tests)', },
+            {'name': u'Chromium Mac Release (Tests)', },
+            {'name': u'Chromium Win Release (Tests)', },
             {'name': u'New run-webkit-tests', },
-            {'name': u'WinCairo Debug (Build)', },
-            {'name': u'WinCE Release (Build)', },
-            {'name': u'EFL Linux Release (Build)', },
         ]
         name_regexps = [
             "SnowLeopard.*Build",
@@ -260,7 +257,6 @@ class BuildBotTest(unittest.TestCase):
             "SnowLeopard.*\(WebKit2 Test",
             "Leopard.*Release",
             "Windows.*Build",
-            "Windows.*Release.*\(Test",
             "WinCE",
             "EFL",
             "GTK.*32",
@@ -275,7 +271,6 @@ class BuildBotTest(unittest.TestCase):
             {'name': u'SnowLeopard Intel Release (Tests)', },
             {'name': u'SnowLeopard Intel Release (WebKit2 Tests)', },
             {'name': u'Windows Release (Build)', },
-            {'name': u'Windows 7 Release (Tests)', },
             {'name': u'Windows Debug (Build)', },
             {'name': u'GTK Linux 32-bit Release', },
             {'name': u'GTK Linux 32-bit Debug', },
@@ -285,11 +280,9 @@ class BuildBotTest(unittest.TestCase):
             {'name': u'Qt Linux ARMv7 Release', },
             {'name': u'Qt Windows 32-bit Release', },
             {'name': u'Qt Windows 32-bit Debug', },
-            {'name': u'Chromium Win Release', },
-            {'name': u'Chromium Mac Release', },
             {'name': u'Chromium Linux Release', },
-            {'name': u'WinCE Release (Build)', },
-            {'name': u'EFL Linux Release (Build)', },
+            {'name': u'Chromium Mac Release', },
+            {'name': u'Chromium Win Release', },
         ]
 
         # This test should probably be updated if the default regexp list changes
